--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 
   <div ng-view></div>
 
-  <div>Click to Cloud dual list box app: v<span app-version></span></div>
+  <div>Progress bar app: v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -34,11 +34,11 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <!--<script src="bower_components/bootstrap-duallistbox/src/jquery.bootstrap-duallistbox.js"></script>-->
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js"></src>
   <!-- <script src="bower_components/angular-bootstrap-duallistbox/src/directives/bsDuallistbox.js"></script>-->
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/angular-underscore-module/angular-underscore-module.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
