--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,5 +1,17 @@
-<p>This is the partial for view 2.</p>
-<p>
-  Showing of 'interpolate' filter:
-  {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
+
+<div class="option-div"><h1>Progress Bar Demo</h1></div>
+<progressbar class="progress-striped active" animate="true" value="value1" type="{{type1}}">{{value1}}%</progressbar>
+<progressbar class="progress-striped active" animate="true" value="value2" type="{{type2}}">{{value2}}%</progressbar>
+<progressbar class="progress-striped active" animate="true" value="value3" type="{{type3}}">{{value3}}%</progressbar>
+<div class="option-div">
+<select
+	ng-model="barSelection"	
+	ng-options="option.name for option in barOptions"
+>
+</select>
+
+<button class="btn" ng-click="minus25()">-25</button>
+<button class="btn" ng-click="minus10()">-10</button>
+<button class="btn" ng-click="add10()">+10</button>
+<button class="btn" ng-click="add25()">+25</button>
+</div>
