--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/angular-underscore-module/angular-underscore-module.js"></script>
   <script src="app.js"></script>
+  <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
